name:                hackage-mirror
version:             0.1.0.0
synopsis:            Simple mirroring utility for Hackage
homepage:            http://fpcomplete.com
license:             BSD3
license-file:        LICENSE
author:              John Wiegley
maintainer:          johnw@fpcomplete.com
category:            Distribution
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  exposed-modules:     Hackage.Mirror
                       Hackage.Mirror.Types
  build-depends:       base >=4.5
                     , aws >=0.11
                     , bytestring
                     , cereal
                     , conduit
                     , conduit-extra
                     , cryptohash
                     , data-default
                     , directory
                     , fast-logger
                     , filepath
                     , http-conduit
                     , lifted-async
                     , lifted-base
                     , mmorph
                     , monad-control
                     , monad-logger
                     , old-locale
                     , resourcet
                     , retry
                     , shakespeare
                     , stm
                     , tar
                     , template-haskell
                     , temporary
                     , text
                     , thyme
                     , transformers >=0.4
                     , unordered-containers

executable hackage-mirror
  default-language:    Haskell2010
  hs-source-dirs:      main
  main-is:             Main.hs
  build-depends:       base >=4.5
                     , hackage-mirror
                     , optparse-applicative
