name:          simple-mirror
version:       0.1.0.0
synopsis:      Simple mirroring utility for Hackage
homepage:      http://fpcomplete.com
license:       BSD3
license-file:  LICENSE
author:        John Wiegley
maintainer:    johnw@fpcomplete.com
category:      Network
build-type:    Simple
cabal-version: >=1.10

executable simple-mirror
  default-language: Haskell2010
  main-is: SimpleMirror.hs
  build-depends:       
      base >=4.5
    , attempt
    , aws
    , bytestring
    , cereal
    , conduit
    , cryptohash
    , directory
    , failure
    , fast-logger
    , filepath
    , http-conduit
    , lifted-async
    , lifted-base
    , mmorph
    , monad-control
    , monad-logger
    , old-locale
    , optparse-applicative
    , resourcet
    , retry
    , shakespeare-text
    , stm
    , tar
    , template-haskell
    , temporary
    , text
    , thyme
    , transformers
    , unordered-containers
    , zlib-conduit
