name:          simple-mirror
version:       0.1.0.0
synopsis:      Simple mirroring utility for Hackage
homepage:      http://fpcomplete.com
license:       BSD3
license-file:  LICENSE
author:        John Wiegley
maintainer:    johnw@fpcomplete.com
category:      Network
build-type:    Simple
cabal-version: >=1.10

executable simple-mirror
  ghc-options: -Wall -fwarn-incomplete-record-updates
  default-language: Haskell2010
  main-is: SimpleMirror.hs
  build-depends:
      base >=4.5
    , aws
    , bytestring
    , cereal
    , conduit
    , conduit-extra
    , cryptohash
    , data-default
    , directory
    , fast-logger
    , filepath
    , fpco-extras
    , http-conduit
    , lifted-async
    , lifted-base
    , mmorph
    , monad-control
    , monad-logger
    , old-locale
    , optparse-applicative
    , resourcet
    , shakespeare
    , stm
    , tar
    , template-haskell
    , temporary
    , text
    , thyme
    , transformers
    , unordered-containers
